--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 		<compiler-plugin.version>3.13.0</compiler-plugin.version>
 		<war-plugin.version>3.4.0</war-plugin.version>
 		<liberty-plugin.version>3.10.3</liberty-plugin.version>
+		<junit-jupiter-version>5.11.0</junit-jupiter-version>
+		<mockito-core-version>5.11.0</mockito-core-version>
+		<mockito-junit-version>5.11.0</mockito-junit-version>
 	</properties>
 
 	<dependencies>
@@ -29,6 +32,24 @@
 			<artifactId>jakarta.jakartaee-core-api</artifactId>
 			<version>${jakartaee-api.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito-core-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito-junit-version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
