--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,18 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml
+      
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Upload WAR Artifact
+      uses: actions/upload-artifact@v4.4.3
+      with:
+        name: actions-demo-war
+        path: target/actions-demo.war
 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
