--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<junit-jupiter-version>5.11.0</junit-jupiter-version>
 		<mockito-core-version>5.11.0</mockito-core-version>
 		<mockito-junit-version>5.11.0</mockito-junit-version>
+		<maven-surefire-version>3.5.2</maven-surefire-version>
 	</properties>
 
 	<dependencies>
@@ -74,6 +75,18 @@
 				<groupId>io.openliberty.tools</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
 				<version>${liberty-plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-version}</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+						<include>**/*Tests.java</include>
+						<include>**/*TestCase.java</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 
