Update and rename maven.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,9 @@ jobs:
         name: actions-demo-war
         path: target/actions-demo.war
 
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag actions-demo:$(date +%s)
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
