--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,20 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag actions-demo:$(date +%s)
 
+      # Log in to GitHub Container Registry
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    # Tag the image to include the GitHub Container Registry and push it
+    - name: Tag and Push Docker Image to GitHub Container Registry
+      run: |
+        docker tag actions-demo:$(date +%s) ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+        docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
