--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,14 +50,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push Docker Image to GitHub Container Registry (Public)
+    - name: Push Docker Image to GitHub Container Registry
       run: docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-
-    # Tag the image to include the GitHub Container Registry and push it
-    - name: Tag and Push Docker Image to GitHub Container Registry
-      run: |
-        docker tag actions-demo:$(date +%s) ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-        docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
