--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build and Test CI for Open Liberty + JEE using maven
+name: Build, Test and Deploy Pipeline for Open Liberty + JEE
 
 on:
   push:
@@ -46,7 +46,52 @@ jobs:
 
     - name: Push Docker Image to GitHub Container Registry
       run: docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+      
+    - name: Deploy to Hetzner
+      env:
+        HETZNER_HOST: ${{ secrets.HETZNER_HOST }}
+        HETZNER_USERNAME: ${{ secrets.HETZNER_USERNAME }}
+        HETZNER_SSH_KEY: ${{ secrets.HETZNER_SSH_KEY }}
+      run: |
+        # Write the SSH key to a file
+        echo "$HETZNER_SSH_KEY" > deploy_key
+        chmod 600 deploy_key
 
+        # Create deployment script
+        cat > deploy.sh << 'EOF'
+        #!/bin/bash
+        # Stop and remove existing container if it exists
+        docker stop actions-demo || true
+        docker rm actions-demo || true
+
+        # Login to GitHub Container Registry
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+        # Pull latest image
+        docker pull ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+
+        # Run new container
+        docker run -d \
+          --name actions-demo \
+          --restart unless-stopped \
+          -p 9080:9080 \
+          -p 9443:9443 \
+          ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+        EOF
+
+        # Copy deployment script to server
+        scp -i deploy_key -o StrictHostKeyChecking=no deploy.sh $HETZNER_USERNAME@$HETZNER_HOST:/root/deploy.sh
+
+        # Execute deployment script
+        ssh -i deploy_key -o StrictHostKeyChecking=no $HETZNER_USERNAME@$HETZNER_HOST "chmod +x /root/deploy.sh && /root/deploy.sh"
+
+    # Optional: Cleanup deployment key
+    - name: Cleanup
+      if: always()
+      run: rm -f deploy_key
+
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
