--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -53,9 +53,17 @@ jobs:
         HETZNER_USERNAME: ${{ secrets.HETZNER_USERNAME }}
         HETZNER_SSH_KEY: ${{ secrets.HETZNER_SSH_KEY }}
       run: |
+        # Create SSH directory
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
+
         # Write the SSH key to a file
-        echo "$HETZNER_SSH_KEY" > deploy_key
-        chmod 600 deploy_key
+        echo "$HETZNER_SSH_KEY" > ~/.ssh/deploy_key
+        chmod 600 ~/.ssh/deploy_key
+
+        # Add host key scanning
+        ssh-keyscan -H $HETZNER_HOST >> ~/.ssh/known_hosts
+        chmod 644 ~/.ssh/known_hosts
 
         # Create deployment script
         cat > deploy.sh << 'EOF'
@@ -80,18 +88,38 @@ jobs:
         EOF
 
         # Copy deployment script to server
-        scp -i deploy_key -o StrictHostKeyChecking=no deploy.sh $HETZNER_USERNAME@$HETZNER_HOST:/root/deploy.sh
+        scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no deploy.sh $HETZNER_USERNAME@$HETZNER_HOST:/root/deploy.sh
 
         # Execute deployment script
-        ssh -i deploy_key -o StrictHostKeyChecking=no $HETZNER_USERNAME@$HETZNER_HOST "chmod +x /root/deploy.sh && /root/deploy.sh"
+        ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no $HETZNER_USERNAME@$HETZNER_HOST "chmod +x /root/deploy.sh && /root/deploy.sh"
 
-    # Optional: Cleanup deployment key
+    # Health check after deployment
+    - name: Health Check
+      if: github.ref == 'refs/heads/master'
+      env:
+        HETZNER_HOST: ${{ secrets.HETZNER_HOST }}
+      run: |
+        # Wait for the application to start
+        sleep 30
+
+        # Check the health of the application
+        for i in {1..10}; do
+          if curl -f http://$HETZNER_HOST:9080/health || curl -f https://$HETZNER_HOST:9443/health; then
+            echo "Application is healthy"
+            exit 0
+          else
+            echo "Waiting for application to become healthy... Attempt $i of 10"
+            sleep 10
+          fi
+        done
+
+        echo "Application did not become healthy in time"
+        exit 1
+
+    # Cleanup
     - name: Cleanup
       if: always()
-      run: rm -f deploy_key
-
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      run: rm -rf ~/.ssh/deploy_key
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
