--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,126 +1,93 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Build, Test and Deploy Pipeline for Open Liberty + JEE
+name: Build, Test and Deploy Pipeline
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-
-    - name: Test with Maven
-      run: mvn -B test --file pom.xml
-      
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Build the Docker image
-      run: |
-        docker build . --file Dockerfile --tag actions-demo:latest
-        docker tag actions-demo:latest ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Push Docker Image to GitHub Container Registry
-      run: docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-      
-    - name: Deploy to Hetzner
-      env:
-        HETZNER_HOST: ${{ secrets.HETZNER_HOST }}
-        HETZNER_USERNAME: ${{ secrets.HETZNER_USERNAME }}
-        HETZNER_SSH_KEY: ${{ secrets.HETZNER_SSH_KEY }}
-      run: |
-        # Create SSH directory
-        mkdir -p ~/.ssh
-        chmod 700 ~/.ssh
-
-        # Write the SSH key to a file
-        echo "$HETZNER_SSH_KEY" > ~/.ssh/deploy_key
-        chmod 600 ~/.ssh/deploy_key
-
-        # Add host key scanning
-        ssh-keyscan -H $HETZNER_HOST >> ~/.ssh/known_hosts
-        chmod 644 ~/.ssh/known_hosts
-
-        # Create deployment script
-        cat > deploy.sh << 'EOF'
-        #!/bin/bash
-        # Stop and remove existing container if it exists
-        docker stop actions-demo || true
-        docker rm actions-demo || true
-        
-        # Login to GitHub Container Registry
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        
-        # Pull latest image
-        docker pull ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-        
-        # Run new container
-        docker run -d \
-        --name actions-demo \
-        --restart no \
-        -p 9080:9080 \
-        -p 9443:9443 \
-        -e WLP_LOGGING_CONSOLE_FORMAT=JSON \
-        -e WLP_LOGGING_CONSOLE_LOGLEVEL=INFO \
-        ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-        
-        # Wait for Liberty server to start
-        echo "Waiting for Liberty server to start..."
-        timeout 300 bash -c 'while ! docker logs actions-demo 2>&1 | grep -q "CWWKF0011I: The defaultServer server is ready to run a smarter planet."; do sleep 2; done' || {
-          echo "Timeout waiting for Liberty server to start"
+      - uses: actions/checkout@v4
+  
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+  
+      - name: Test and Build
+        run: |
+          mvn -B test --file pom.xml
+          mvn -B package --file pom.xml
+  
+      - name: Build and Tag Docker image
+        run: |
+          docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+  
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+  
+      - name: Push Docker Image
+        run: docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+  
+      - name: Deploy to Hetzner
+        env:
+          HETZNER_HOST: ${{ secrets.HETZNER_HOST }}
+          HETZNER_USERNAME: ${{ secrets.HETZNER_USERNAME }}
+          HETZNER_SSH_KEY: ${{ secrets.HETZNER_SSH_KEY }}
+        run: |
+          mkdir -p ~/.ssh && chmod 700 ~/.ssh
+          echo "$HETZNER_SSH_KEY" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -H $HETZNER_HOST >> ~/.ssh/known_hosts
+  
+          cat > deploy.sh << 'EOF'
+          #!/bin/bash
+          docker stop actions-demo || true
+          docker rm actions-demo || true
+  
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker pull ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+  
+          docker run -d \
+            --name actions-demo \
+            --restart no \
+            -p 9080:9080 \
+            -p 9443:9443 \
+            -e WLP_LOGGING_CONSOLE_FORMAT=JSON \
+            -e WLP_LOGGING_CONSOLE_LOGLEVEL=INFO \
+            ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+  
+          timeout 300 bash -c 'while ! docker logs actions-demo 2>&1 | grep -q "CWWKF0011I: The defaultServer server is ready"; do sleep 2; done' || {
+            docker logs actions-demo
+            exit 1
+          }
+  
+          for i in {1..5}; do
+            if docker exec actions-demo curl -s -f http://localhost:9080/rest/health > /dev/null; then
+                exit 0
+            fi
+            sleep 5
+          done
+  
           docker logs actions-demo
           exit 1
-        }
-        
-        # Verify application health
-        echo "Checking application health..."
-        for i in {1..5}; do
-          if docker exec actions-demo curl -s -f http://localhost:9080/rest/health > /dev/null; then
-              echo "Application is healthy"
-              exit 0
-          fi
-          sleep 5
-        done
-        
-        echo "Application health check failed"
-        docker logs actions-demo
-        exit 1
-        EOF
-        # Copy deployment script to server
-        scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no deploy.sh $HETZNER_USERNAME@$HETZNER_HOST:/root/deploy.sh
-
-        # Execute deployment script
-        ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no $HETZNER_USERNAME@$HETZNER_HOST "chmod +x /root/deploy.sh && /root/deploy.sh"
-
-    # Cleanup
-    - name: Cleanup
-      if: always()
-      run: rm -rf ~/.ssh/deploy_key
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+          EOF
+  
+          scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no deploy.sh $HETZNER_USERNAME@$HETZNER_HOST:/root/deploy.sh
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no $HETZNER_USERNAME@$HETZNER_HOST "chmod +x /root/deploy.sh && /root/deploy.sh"
+  
+      - name: Cleanup
+        if: always()
+        run: rm -rf ~/.ssh/deploy_key
+  
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
