New version heree!

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<version>${mockito-junit-version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+		</dependency>
 	</dependencies>
 
 	<build>
