--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,13 +23,8 @@ jobs:
         run: |
           mvn -B package --file pom.xml
 
-      - name: Build and Tag Docker image
-        run: |
-          docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/actions-demo:latest \
-            --build-arg POSTGRES_DB=${{ secrets.POSTGRES_DB }} \
-            --build-arg POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
-            --build-arg POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-          
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -38,8 +33,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Docker Image
-        run: docker push ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+         - context: .
+         - file: ./docker-compose.yml
+         - push: true
+         - tags: ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+         - build-args:
+            POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+            POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
       - name: Deploy to Hetzner
         env:
@@ -54,20 +58,12 @@ jobs:
           
           cat > deploy.sh << 'EOF'
           #!/bin/bash
-          docker stop actions-demo || true
-          docker rm actions-demo || true
-          
+          docker-compose down || true
+  
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker pull ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+          docker-compose pull app
           
-          docker run -d \
-            --name actions-demo \
-            --restart no \
-            -p 9080:9080 \
-            -p 9443:9443 \
-            -e WLP_LOGGING_CONSOLE_FORMAT=JSON \
-            -e WLP_LOGGING_CONSOLE_LOGLEVEL=INFO \
-            ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+          docker-compose up -d app
           
           timeout 300 bash -c 'while ! docker logs actions-demo 2>&1 | grep -q "CWWKF0011I: The defaultServer server is ready"; do sleep 2; done' || {
             docker logs actions-demo
