--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-         - context: .
-         - file: ./docker-compose.yml
-         - push: true
-         - tags: ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-         - build-args:
+          context: .
+          file: ./docker-compose.yml
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/actions-demo:latest
+          build-args:
             POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
             POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
             POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
