--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,9 +41,9 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/actions-demo:latest
           build-args:
-            POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-            POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-            POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+            - POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+            - POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+            - POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
       - name: Deploy to Hetzner
         env:
