--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -40,10 +40,10 @@ jobs:
           file: ./docker-compose.yml
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/actions-demo:latest
-          build-args:
-            - POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-            - POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-            - POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          build-args: |
+            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
 
       - name: Deploy to Hetzner
         env:
