--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -39,7 +39,7 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/${{ github.repository_owner }}/actions-demo:latest --push .
+          docker buildx build --platform linux/arm64 -t ghcr.io/${{ github.repository_owner }}/actions-demo:latest --push .
 
       - name: Deploy to Hetzner
         env:
