--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.7.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.microprofile.openapi</groupId>
+			<artifactId>microprofile-openapi-api</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -130,7 +135,35 @@
 			<plugin>
 				<groupId>io.openliberty.tools</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
-				<version>${liberty-plugin.version}</version>
+				<version>3.8.2</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<runtimeArtifact>
+						<!-- WLP without preinstalled feature(s) -->
+						<groupId>com.ibm.websphere.appserver.runtime</groupId>
+						<artifactId>wlp-kernel</artifactId>
+						<version>24.0.0.5</version>
+						<type>zip</type>
+					</runtimeArtifact>
+					<copyDependencies>
+						<dependencyGroup>
+							<location>${project.build.directory}/liberty/wlp/usr/shared/resources</location>
+							<dependency>
+								<groupId>org.postgresql</groupId>
+								<artifactId>postgresql</artifactId>
+								<version>${postgresql.version}</version>
+							</dependency>
+						</dependencyGroup>
+					</copyDependencies>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
