--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -51,7 +51,46 @@ jobs:
           echo "$HETZNER_SSH_KEY" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
           ssh-keyscan -H $HETZNER_HOST >> ~/.ssh/known_hosts
-          
+
+
+          # (Re)deploying database
+          cat > docker-compose.yml << 'EOF'
+          version: '3.8'
+      
+          services:
+            postgres:
+              image: postgres:latest
+              container_name: postgres_db
+              ports:
+                - "5432:5432"
+              environment:
+                - POSTGRES_DB=${POSTGRES_DB}
+                - POSTGRES_USER=${POSTGRES_USER}
+                - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+              volumes:
+                - postgres_data:/var/lib/postgresql/data
+              healthcheck:
+                test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+                interval: 10s
+                timeout: 5s
+                retries: 5
+      
+          volumes:
+            postgres_data:
+              name: postgres_data
+          EOF
+      
+          # Stop any existing containers
+          docker-compose down
+      
+          # Start the database
+          docker-compose up -d
+      
+          # Wait for the database to be ready
+          timeout 30s bash -c 'until docker-compose exec -T postgres pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}; do sleep 2; done'
+
+
+          # Deploying of the built image
           cat > deploy.sh << 'EOF'
           #!/bin/bash
           docker stop actions-demo || true
