--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -55,8 +55,6 @@ jobs:
 
           # (Re)deploying database
           cat > docker-compose.yml << 'EOF'
-          version: '3.8'
-      
           services:
             postgres:
               image: postgres:latest
@@ -64,9 +62,9 @@ jobs:
               ports:
                 - "5432:5432"
               environment:
-                - POSTGRES_DB=${POSTGRES_DB}
-                - POSTGRES_USER=${POSTGRES_USER}
-                - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+                - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+                - POSTGRES_USER=${{ POSTGRES_USER }}
+                - POSTGRES_PASSWORD=${{ POSTGRES_PASSWORD }}
               volumes:
                 - postgres_data:/var/lib/postgresql/data
               healthcheck:
@@ -74,7 +72,6 @@ jobs:
                 interval: 10s
                 timeout: 5s
                 retries: 5
-      
           volumes:
             postgres_data:
               name: postgres_data
