--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -63,8 +63,8 @@ jobs:
                 - "5432:5432"
               environment:
                 - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-                - POSTGRES_USER=${{ POSTGRES_USER }}
-                - POSTGRES_PASSWORD=${{ POSTGRES_PASSWORD }}
+                - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+                - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
               volumes:
                 - postgres_data:/var/lib/postgresql/data
               healthcheck:
