--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -58,7 +58,7 @@ jobs:
           services:
             postgres:
               image: postgres:latest
-              container_name: postgres_db
+              container_name: postgres
               ports:
                 - "5432:5432"
               environment:
@@ -68,7 +68,7 @@ jobs:
               volumes:
                 - postgres_data:/var/lib/postgresql/data
               healthcheck:
-                test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+                test: ["CMD-SHELL", "pg_isready -U ${{ secrets.POSTGRES_USER }} -d ${{ secrets.POSTGRES_PASSWORD }}"]
                 interval: 10s
                 timeout: 5s
                 retries: 5
