--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -58,6 +58,7 @@ jobs:
           services:
             postgres:
               image: postgres:latest
+              platform: linux/amd64
               container_name: postgres
               ports:
                 - "5432:5432"
