--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -57,8 +57,7 @@ jobs:
           cat > docker-compose.yml << 'EOF'
           services:
             postgres:
-              image: postgres:latest
-              platform: linux/amd64
+              image: amd64/postgres:latest
               container_name: postgres
               ports:
                 - "5432:5432"
