--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -77,6 +77,9 @@ jobs:
           volumes:
             postgres_data:
               name: postgres_data
+          networks:
+            actions-demo-network:
+              name: actions-demo-network
           EOF
       
           # Stop any existing containers
